version/0.78/_sources/autoapi/pyedb/configuration/cfg_ports_sources/CfgDiffWavePort.rst.txt






:class:`CfgDiffWavePort`
========================


.. py:class:: pyedb.configuration.cfg_ports_sources.CfgDiffWavePort(pedb=None, *args, **kwargs)

   
   Represent one bundled differential wave-port entry.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CfgDiffWavePort

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~set_parameters_to_edb`
            - Write this differential port into the open EDB design.
          * - :py:attr:`~export_properties`
            - Serialize this differential port to a plain dictionary.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - 
          * - :py:attr:`~type`
            - 
          * - :py:attr:`~horizontal_extent_factor`
            - 
          * - :py:attr:`~vertical_extent_factor`
            - 
          * - :py:attr:`~pec_launch_width`
            - 
          * - :py:attr:`~positive_port`
            - 
          * - :py:attr:`~negative_port`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.configuration.cfg_ports_sources import CfgDiffWavePort


Attribute detail
----------------

.. py:attribute:: name

.. py:attribute:: type

.. py:attribute:: horizontal_extent_factor

.. py:attribute:: vertical_extent_factor

.. py:attribute:: pec_launch_width

.. py:attribute:: positive_port

.. py:attribute:: negative_port



Method detail
-------------

.. py:method:: set_parameters_to_edb()

   
   Write this differential port into the open EDB design.

   Creates two individual wave ports (positive and negative arms) and
   wraps them in a bundle terminal.




   :Returns:

       :obj:`object` or :class:`python:dict`
           Bundle terminal object, or the serialized payload when no EDB
           session is attached.











   ..
       !! processed by numpydoc !!

.. py:method:: export_properties()

   
   Serialize this differential port to a plain dictionary.





   :Returns:

       :class:`python:dict`
           Dictionary with ``name``, ``type``, terminal descriptors, and
           extent parameters.











   ..
       !! processed by numpydoc !!




